bit_roles_tests/tests/compile_fail/non_enum.rs
use bit_roles::BitRole;

#[derive(Debug, BitRole, Copy, Clone)]
struct Role {}

fn main() {}
