bit_roles_tests/tests/compile_fail/non_enum.stderr
error: This macro can only be used with enums.
 --> tests/compile_fail/non_enum.rs:3:17
  |
3 | #[derive(Debug, BitRole, Copy, Clone)]
  |                 ^^^^^^^
  |
  = note: this error originates in the derive macro `BitRole` (in Nightly builds, run with -Z macro-backtrace for more info)
